--- a/src/modules/mail/templates/checkout.hbs
+++ b/src/modules/mail/templates/checkout.hbs
@@ -1,7 +1,7 @@
 <p>Hey {{ name }},</p>
-<p>Please click below to confirm your email</p>
+<p>Asset {{asset_id}}-{{asset_name}} is checkout to you</p>
 <p>
-    <a href="{{ url }}">Confirm</a>
+    <a href="{{ url }}">Check now!</a>
 </p>
 
 <p>If you did not request this email you can safely ignore it.</p>
